# gameboy

./: .gitignore  CMakeLists.txt  Readme.md
.cache/clangd/index/: TTFReader.cpp.2F3F6773CEC9DBC0.idx  TTFReader.cpp.68542BF76DB47ACF.idx  TTFReader.h.140760ECC7724E50.idx  TTFReader.h.CEC2C68912C8C26B.idx  TTFTypes.h.3B33A05D9180FF58.idx  glad.c.12F160A7F8E828B4.idx  glad.h.85AE2E59DF3B698C.idx  khrplatform.h.16C654854ED87707.idx  main.cpp.477198B6BFF9B279.idx  reader.cpp.11C0C40EFD1B0D21.idx  reader.cpp.AC15B33FFBE5C2B7.idx  reader.h.948FB5B436BE7473.idx  reader.h.A5C87568F68FE166.idx
src/: main.cpp
src/font/: TTFReader.cpp  TTFReader.h  TTFTypes.h  reader.cpp  reader.h
src/glad/include/glad/: glad.h
src/glad/src/: glad.c
